--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -8,7 +8,7 @@ $white: #FFFFFF;
 $yellow: #db8405;
 $light-yellow: #FEF1DD;
 $blue: #80A0B1;
-$light-grey: #F6F6F6;
+$light-grey: #f6f6f6;
 $grey: #E8E8E8;
 $navy: #283038;
 $border-grey: #a6a6a6;
