--- a/scss/_herder.scss
+++ b/scss/_herder.scss
@@ -3,12 +3,12 @@
 
 header {
   width: 100%;
-  height: 120px;
+  height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-inline:30px;
-  padding-bottom: 40px;
+  // padding-bottom: 40px;
   .logo {
     width: 150px;
   }
@@ -240,7 +240,7 @@ header {
       justify-content: space-between;
       align-items: center;
       position: fixed;
-      top: 10px;
+      top: 8px;
       right: 20px;
       border-radius: 10px;
       transition: 0.4s ease;
