--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -187,7 +187,7 @@ header{  //鈴木追加
         margin-inline: auto;
       }
 
-      @include mx.tb {
+      @include mx.sp {
         width: 100%;
       }
 
@@ -256,7 +256,6 @@ header{  //鈴木追加
   }
 }
 
-
 .before-after {
   .wrapper {
     margin-bottom: 100px;
@@ -267,7 +266,6 @@ header{  //鈴木追加
     justify-content: space-between;
 
     @include mx.tb {
-      width: 70%;
       flex-direction: column;
       margin-inline: auto;
     }
@@ -277,7 +275,6 @@ header{  //鈴木追加
     }
 
     li {
-      position: relative;
       flex: 1;
       background-color: $white;
       box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
@@ -286,6 +283,8 @@ header{  //鈴木追加
       margin-right: 20px;
 
       @include mx.tb {
+        display: flex;
+        justify-content: space-between;
         margin-right: 0;
         margin-bottom: 20px;
       }
@@ -298,41 +297,58 @@ header{  //鈴木追加
         height: 200px;
         object-fit: cover;
         border-radius: 5px;
-      }
 
-      .middle {
-        width: 100%;
-
-        .label {
-          display: block;
-          font-size: $fs-small;
-        }
-
-        .text {
-          display: inline-block;
-          border-bottom: 1px solid $yellow;
+        @include mx.tb {
+          width: 50%;
         }
       }
 
-      .right {
-        text-align: right;
-      }
+      .text-right {
+        position: relative;
 
-      .arrow {
-        width: 50px;
-        height: 30px;
-        position: absolute;
-        left: 10px;
-        bottom: 60px;
-
-        img {
-          height: 100%;
-          object-fit: cover;
+        @include mx.tb {
+          width: 50%;
+          margin-left: 15px;
         }
-      }
+        
+        .middle {
+          width: 100%;
 
-      .small {
-        text-align: center;
+          .label {
+            display: block;
+            font-size: $fs-small;
+          }
+
+          .text {
+            display: inline-block;
+            border-bottom: 1px solid $yellow;
+          }
+        }
+
+        .right {
+          text-align: right;
+        }
+
+        .arrow {
+          width: 40px;
+          position: absolute;
+          left: 0;
+          bottom: 40px;
+
+          @include mx.tb {
+            width: 40px;
+            bottom: 110px;
+          }
+
+          img {
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        .small {
+          text-align: center;
+        }
       }
     }
   }
