--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -261,79 +261,79 @@ header {
 }
 
 
-  .before-after {
-    .wrapper {
-      margin-bottom: 100px;
+.before-after {
+  .wrapper {
+    margin-bottom: 100px;
+  }
+
+  .list {
+    display: flex;
+    justify-content: space-between;
+
+    @include mx.tb {
+      width: 70%;
+      flex-direction: column;
+      margin-inline: auto;
     }
 
-    .list {
-      display: flex;
-      justify-content: space-between;
+    @include mx.sp {
+      width: 100%;
+    }
+
+    li {
+      position: relative;
+      flex: 1;
+      background-color: $white;
+      box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      padding: 10px 15px;
+      margin-right: 20px;
 
       @include mx.tb {
-        width: 70%;
-        flex-direction: column;
-        margin-inline: auto;
+        margin-right: 0;
+        margin-bottom: 20px;
       }
 
-      @include mx.sp {
-        width: 100%;
+      &:last-child {
+        margin-right: 0;
       }
 
-      li {
-        position: relative;
-        flex: 1;
-        background-color: $white;
-        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
+      img {
+        height: 200px;
+        object-fit: cover;
         border-radius: 5px;
-        padding: 10px 15px;
-        margin-right: 20px;
+      }
 
-        @include mx.tb {
-          margin-right: 0;
-          margin-bottom: 20px;
+      .middle {
+        width: 100%;
+
+        .label {
+          display: block;
+          font-size: $fs-small;
         }
 
-        &:last-child {
-          margin-right: 0;
+        .text {
+          display: inline-block;
+          border-bottom: 1px solid $yellow;
         }
+      }
+
+      .right {
+        text-align: right;
+      }
+
+      .arrow {
+        width: 50px;
+        height: 30px;
+        position: absolute;
+        left: 10px;
+        bottom: 60px;
 
         img {
-          height: 200px;
+          height: 100%;
           object-fit: cover;
-          border-radius: 5px;
         }
-
-        .middle {
-          width: 100%;
-
-          .label {
-            display: block;
-            font-size: $fs-small;
-          }
-
-          .text {
-            display: inline-block;
-            border-bottom: 1px solid $yellow;
-          }
-        }
-
-        .right {
-          text-align: right;
-        }
-
-        .arrow {
-          width: 50px;
-          height: 30px;
-          position: absolute;
-          left: 10px;
-          bottom: 60px;
-
-          img {
-            height: 100%;
-            object-fit: cover;
-          }
-        }
+      }
 
       .small {
         text-align: center;
@@ -341,63 +341,64 @@ header {
     }
   }
 }
+
 .reason {
   padding-bottom: 100px;
 
-    .wrapper {
-      margin-bottom: 0;
-    }
+  .wrapper {
+    margin-bottom: 0;
+  }
 
-    .section-title {
-      span {
-        position: relative;
-        display: block;
-        font-size: $fs-small;
-        margin-top: 10px;
-        margin-left: 20px;
+  .section-title {
+    span {
+      position: relative;
+      display: block;
+      font-size: $fs-small;
+      margin-top: 10px;
+      margin-left: 20px;
 
-        &::before {
-          width: 8px;
-          height: 8px;
-          content: "";
-          position: absolute;
-          top: 50%;
-          left: -14px;
-          transform: translateY(-50%);
-          background-color: $yellow;
-          border-radius: 50%;
-        }
+      &::before {
+        width: 8px;
+        height: 8px;
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: -14px;
+        transform: translateY(-50%);
+        background-color: $yellow;
+        border-radius: 50%;
       }
     }
+  }
 
-    .list {
-      margin-top: 50px;
+  .list {
+    margin-top: 50px;
 
-      .item {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 25px;
+    .item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 25px;
+
+      @include mx.tb {
+        flex-direction: column;
+      }
+
+      .left {
+        width: 30%;
+        margin-right: 15px;
 
         @include mx.tb {
-          flex-direction: column;
+          width: 50%;
         }
+      }
 
-        .left {
-          width: 30%;
-          margin-right: 15px;
+      .right {
+        width: 70%;
 
-          @include mx.tb {
-            width: 50%;
-          }
+        @include mx.tb {
+          width: 100%;
         }
-
-        .right {
-          width: 70%;
-
-          @include mx.tb {
-            width: 100%;
-          }
 
         .box-title {
           color: $yellow;
@@ -458,6 +459,10 @@ header {
 
   .wrapper {
 
+    @include mx.tb-1100 {
+      max-width: 880px;
+    } 
+
     @include mx.tb {
       margin-bottom: 40px;
     }
@@ -480,13 +485,13 @@ header {
     gap: 24px;
 
     @include mx.tb {
-      grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+      grid-template-columns: 1fr 1fr 1fr;
       padding: 32px 40px;
       margin-inline: 20px;
     }
 
     @include mx.sp {
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      grid-template-columns: 1fr;
       padding: 32px 40px;
       margin-inline: 0 20px 0 20px;
     }
@@ -502,6 +507,7 @@ header {
 
         .middle {
           margin-bottom: 0;
+          font-weight: 600;
         }
 
         img {
@@ -549,20 +555,38 @@ header {
 
   .teacher-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     margin-top: 40px;
-    gap: 24px;
+    gap: 32px;
 
-    @include mx.tb {
-      gap: 50px 25px;
+    @include mx.tb-1100 {
+      grid-template-columns: 1fr 1fr;
+      gap: 120px 25px;
     }
 
     @include mx.sp {
-      gap: 80px;
+      grid-template-columns: 1fr;
+      gap: 120px;
     }
 
     .items {
       position: relative;
+
+      .pic {
+        border-radius: 5px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+      }
+
+      .position {
+        display: block;
+        margin-top: 10px;
+        font-size: 1.4rem;
+      }
+
+      .name,
+      .words {
+        margin-top: 0;
+      }
 
       .teacher_more_button {
         position: absolute;
@@ -576,9 +600,21 @@ header {
           color: $yellow;
         }
 
+        @include mx.tb-1100 {
+          bottom: -60px;
+        }
+
         span {
-          margin-left: 75%;
+          margin-left: 72%;
           color: $white;
+
+          &:hover {
+            color: $yellow;
+          }
+
+          @include mx.tb-1100 {
+            margin-left: 80%;
+          }
         }
 
       }
@@ -595,6 +631,108 @@ header {
   .name,
   .words {
     color: $white;
+  }
+}
+
+// モーダルのスタイル
+.teacher-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+
+  &.is-active {
+    display: block;
+  }
+
+  .teacher-modal-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+
+  .teacher-modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: $white;
+    border-radius: 10px;
+    padding: 30px;
+    max-width: 700px;
+    width: 90%;
+    max-height: 80vh;
+    overflow-y: auto;
+
+    @include mx.sp {
+      padding: 20px;
+      max-width: 90%;
+    }
+  }
+
+  .teacher-modal-close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    background: none;
+    border: none;
+    font-size: 30px;
+    color: #333;
+    cursor: pointer;
+    line-height: 1;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+
+    &:hover {
+      color: $yellow;
+    }
+  }
+
+  .teacher-modal-inner {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    @include mx.sp {
+      flex-direction: column;
+    }
+
+    .teacher-modal-pic {
+      max-width: 200px;
+      height: 320px;
+      border-radius: 5px;
+
+      @include mx.sp {
+        height: 200px;
+      }
+    }
+
+    .teacher-modal-info {
+
+      .teacher-modal-position {
+        display: block;
+        font-size: 1.4rem;
+      }
+
+      .teacher-modal-name {
+        font-size: 2.4rem;
+        font-weight: bold;
+        margin-block: 0;
+        border-bottom: 1px solid $yellow;
+      }
+
+      .teacher-modal-message {
+        font-size: 14px;
+        line-height: 1.8;
+      }
+    }
   }
 }
 
@@ -693,7 +831,7 @@ header {
 }
 
 #comparison {
-  background-color: $white;
+  background-color: transparent;
   z-index: 0;
   position: relative;
   padding-bottom: 80px;
@@ -719,6 +857,28 @@ header {
     }
   }
 
+  .sp-icon {
+    visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    margin-bottom: 20px;
+    margin-inline: auto;
+
+    img {
+      width: 30px;
+    }
+
+    span {
+      color: $yellow;
+      font-size: 1.2rem;
+    }
+
+    @include mx.sp {
+      visibility: visible;
+    }
+  }
+
   .compare-table {
     width: 100%;
     border-collapse: collapse;
@@ -738,10 +898,11 @@ header {
     @include mx.sp {
       display: block;
       width: 100%;
-      overflow-x: auto; 
-      -webkit-overflow-scrolling: touch; 
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
       max-width: 320px;
       font-size: 1.6rem;
+      margin-inline: auto;
     }
 
     th,
