--- a/scss/_company.scss
+++ b/scss/_company.scss
@@ -229,6 +229,7 @@
                         background-color: $blue;
                         border-radius: 3px;
                         color: $white;
+                        border: 2px solid transparent;
 
                         &:hover {
                             background-color: $white;
