リモートmain最新版取り込み直前

--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -506,6 +506,7 @@ header {
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     margin-top: 40px;
     gap: 24px;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
 
     @include mx.tb {
       grid-template-columns: 1fr 1fr 1fr;
@@ -527,6 +528,7 @@ header {
         align-items: center;
         padding: 24px 16px;
         border-radius: 8px;
+        box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
 
         .middle {
           margin-bottom: 0;
